# landscape

./: .gitignore  CMakeLists.txt  README.md  runme.sh
.github/workflows/: cmake.yml
experiment/: cluster_k_connect_expr.cpp  cluster_query_expr.cpp  cluster_speed_expr.cpp  cont_expr.cpp  mpi_message_throughput.cpp  parser.py  simple_stream.h
include/: distributed_worker.h  graph_distrib_update.h  memstream.h  message_forwarders.h  msg_buffer_queue.h  work_distributor.h  worker_cluster.h
plotting/: plot.sh
plotting/R_scripts/: ablative_scaling_plot.R  dsu_query_plot.R  scaling_plot.R
plotting/latex/: defines.tex  figures.tex  main.tex  packages.tex
src/: distributed_worker.cpp  graph_distrib_update.cpp  message_forwarders.cpp  work_distributor.cpp  worker_cluster.cpp
test/: distributed_graph_test.cpp  k_connectivity_test.cpp  test_runner.cpp
tools/: ablative_experiment.sh  cluster_basic_init.sh  fetch_ips.sh  k_speed_experiment.sh  measure_bandwidth.sh  query_exp.sh  run_exp.sh  run_experiments.sh  scale_experiment.sh  setup_tagged_workers.sh  speed_experiment.sh  to_static.cpp
tools/ansible/: EFA.yaml  files.yaml  mpi.yaml  ssh.yaml
tools/aws/: create_security_group.sh  create_storage.sh  create_workers.py  delete_storage.sh  get_main_metadata.sh  get_worker_args.sh  placement_group.sh  run_first_n_workers.py  tag_main.sh  terminate_workers.py
tools/streaming/: hash_streamer.cpp  hash_streamer.h  stream_finder.cpp  streamer_bench.cpp  verify_stream.cpp
tools/streaming/gz_specific/: gz_nonsequential_streamer.cpp  gz_nonsequential_streamer.h  gz_sequential_streamer.cpp  gz_sequential_streamer.h
